[package]
name = "libdlt-sys"
version = "0.1.0"
edition = "2021"
authors = ["Sojan James <Sojan.James@gmail.com>"]
description = "Rust bindings for COVESA DLT Library"
homepage = "https://github.com/sabaton-rs/libdlt-sys"
license-file = "LICENSE"
links = "dlt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
pkg-config = "0.3.26"
bindgen = "0.61.0"

